syntax = "proto3";
package scribo;

option go_package =  "./generated/mail";

message SendMail {
    string mailID = 1;
    string from = 2;
    string to = 3;
    string subject = 4;
    string message = 5;
    string attachmentLocation = 6;
}